Fixed spacing issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,7 +93,7 @@ h3 {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: var(--accent);
-  margin: 0;
+  margin: 0 0 30px 0;
   display: inline-block;
 }
 
@@ -203,7 +203,7 @@ img.site-image {
 .site-title {
   font-size: 56px;
   letter-spacing: -.25px;
-  margin: 0 0 18px 0;
+  margin: 0;
   color: var(--text);
   text-decoration: none;
 }
@@ -243,7 +243,8 @@ img.site-image {
 }
 
 .navigation .page-link:visited, a.date:visited, footer p a:visited {
-  color: var(--text)70;
+  color: var(--text);
+  opacity: .4;
 }
 
 footer p {
@@ -344,11 +345,13 @@ iframe {
 }
 
 .archive_categories p a {
-  color: var(--text)70;
+  color: var(--text);
+  opacity: .4;
 }
 
 .archive_categories p a:hover {
   color: var(--text);
+  opacity: 1;
   text-decoration: underline;
 }
 
@@ -361,7 +364,7 @@ iframe {
 .microblog_conversation .microblog_post {
   margin-bottom: 32px;
   padding: 42px;
-  background: var(--text)10;
+  background: #00000050;
   border-radius: 8px;
 }
 
@@ -397,7 +400,8 @@ iframe {
 }
 
 .microblog_time a {
-  color: var(--text)70;
+  color: var(--text);
+  opacity: .4;
   font-size: 18px;
   font-weight: bold;
   text-transform: uppercase;
@@ -408,6 +412,7 @@ iframe {
 
 .microblog_time a:hover {
   color: var(--text);
+  opacity: 1;
   text-decoration: underline;
 }
 
